Added entity mappers